--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,30 @@ h6 {
 ul.list-group {
   min-height: 130px;
 }
+
+.dropover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.dropover-active {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.bottom-trash {
+  background-color: rgba(234, 0, 39, 0.7);
+  color: #f1f1f1;
+  font-family: "Staatliches", sans-serif;
+  font-size: 2.3rem;
+  opacity: 0;
+  transform: translateY(150px);
+  transition: all .5s ease-in-out;
+}
+
+.bottom-trash-drag {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.bottom-trash-active {
+  background-color: rgba(234, 0, 39, 1);
+}
