--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,14 +15,6 @@ ul.list-group {
   min-height: 130px;
 }
 
-.dropover {
-  background-color: rgba(0, 0, 0, 0.3);
-}
-
-.dropover-active {
-  background-color: rgba(0, 0, 0, 0.9);
-}
-
 .bottom-trash {
   background-color: rgba(234, 0, 39, 0.7);
   color: #f1f1f1;
@@ -40,4 +32,37 @@ ul.list-group {
 
 .bottom-trash-active {
   background-color: rgba(234, 0, 39, 1);
+}
+
+.dropover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.dropover-active {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.btn-add,
+.btn-save {
+  background-color: #FA8BFF;
+  background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
+  background-size: 1px 100px;
+  background-position: 0 -10px;
+  transition: all .5s ease-out;
+}
+
+.btn-close,
+.btn-delete {
+  background-color: #EA0028;
+  background-image: linear-gradient(180deg, #FF9A8B 0%, #EA0028 100%);
+  background-size: 1px 100px;
+  background-position: 0 -10px;
+  transition: all .5s ease-out;
+}
+
+.btn-add:hover,
+.btn-save:hover,
+.btn-close:hover,
+.btn-delete:hover {
+  background-position: 1px -50px;
 }
